<resources>
    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="app_name">Games</string>

    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="edit_item_title">Edit Item</string>

    <!-- Name for the application [CHAR LIMIT=12] -->
    <string name="new_item_title">Add Item</string>

    <!-- Label for overflow menu option that inserts fake game data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <!-- Label for overflow menu option that deletes all game data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All Games</string>

    <!-- Title text for the empty view [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">No games for you!</string>

    <!-- Subtitle text for the empty view that prompts the user to add a game [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a game</string>

    <!-- Title for the activity to add a new game [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_game">Add a Game</string>

    <!-- Title for the activity to edit an existing game [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_game">Edit Game</string>

    <!-- Toast messages for inserting a new game[CHAR LIMIT=20] -->
    <string name="insert_name">Game name required</string>

    <string name="insert_price">Price of game needed</string>

    <string name="insert_quantity">Quantity value needed</string>

    <string name="insert_supplier">Supplier value needed</string>

    <string name="insert_phone">Phone number needed</string>

    <!-- Toast messages for editing an existing game[CHAR LIMIT=20] -->
    <string name="update_name">Game name required</string>

    <string name="update_price">Price of game needed</string>

    <string name="update_supplier">Supplier required</string>

    <string name="update_phone">Phone number needed</string>

    <string name="update_quantity">Quantity value needed</string>

    <!-- Label for menu option to save game and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for editor menu option to cancel game and leave editor [CHAR LIMIT=20] -->
    <string name="action_cancel">Cancel</string>

    <!-- Label for editor overflow menu option that deletes the current game [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new game has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_game_successful">Game saved</string>

    <!-- Toast message in editor when new game has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_game_failed">Error with saving game</string>

    <!-- Toast message in editor when current game was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_game_successful">Game updated</string>

    <!-- Toast message in editor when current pet has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_game_failed">Error with updating game</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current game [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current game was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_game_successful">Game deleted</string>

    <!-- Toast message in editor when current game has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_game_failed">Error with deleting game</string>

    <!-- Dialog message to ask the user to confirm deleting the current game [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this game?</string>

    <!-- Dialog button text for the option to confirm deleting the current game [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current game [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Label for supplier information in the editor [CHAR LIMIT=30] -->
    <string name="category_supplier">Supplier</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_game_name">Name</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_game_price">Price</string>

    <!-- Text hint for supplier field in the editor [CHAR LIMIT=30] -->
    <string name="hint_game_supplier">Supplier</string>

    <!-- Text hint for supplier phone number field in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_phone">Phone Number</string>

    <!-- Text hint for game quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_game_quantity">Quantity</string>

    <string name="quantity_low_limit">Value may not be lower than 0 units</string>

    <!-- Label for game sold button in editor menu -->
    <string name="game_sold">Game Sold</string>

    <!-- Label for restock button in editor -->
    <string name="game_restock">Restock</string>
</resources>