<?xml version="1.0" encoding="utf-8"?><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Item Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_game_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_game_name"
                android:inputType="textCapWords" />

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_game_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_game_price"
                android:inputType="textCapWords" />

            <!-- Quantity field -->
            <EditText
                android:id="@+id/edit_game_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_game_quantity"
                android:inputType="number" />

        </LinearLayout>
    </LinearLayout>

    <!-- Supplier category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_supplier" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_supplier"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_game_supplier"
                android:inputType="textCapWords" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!-- Price field -->
                <EditText
                    android:id="@+id/edit_supplier_phone"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_supplier_phone"
                    android:inputType="phone" />

                <ImageButton
                    android:id="@+id/call_button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:src="@drawable/baseline_phone" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/restock_item_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/game_restock" />

        <Button
            android:id="@+id/sell_item_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/game_sold" />
    </LinearLayout>
</LinearLayout>